@@ -8,14 +8,44 @@ use SeleniumClient\DesiredCapabilities;
 use SeleniumClient\WebElement;
 
 /**
- * Class for the back-end control panel screen.
+ * @package     Joomla.Test
+ * @subpackage  Webdriver
  *
+ * @copyright   Copyright (C) 2005 - 2013 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE
+ */
+
+/**
+ * Page class for the back-end menu items manager screen.
+ *
+ * @package     Joomla.Test
+ * @subpackage  Webdriver
+ * @since       3.0
  */
 class MenuItemsManagerPage extends AdminManagerPage
 {
+	/**
+	 * XPath string used to uniquely identify this page
+	 *
+	 * @var    string
+	 * @since  3.0
+	 */
 	protected $waitForXpath =  "//ul/li/a[@href='index.php?option=com_menus&view=items']";
+
+	/**
+	 * URL used to uniquely identify this page
+	 *
+	 * @var    string
+	 * @since  3.0
+	 */
 	protected $url = 'administrator/index.php?option=com_menus&view=items';
 
+	/**
+	 * Array of filter id values for this page
+	 *
+	 * @var    array
+	 * @since  3.0
+	 */
 	public $filters = array(
 			'Menu' => 'menutype',
 			'Max Levels' => 'filter_level',
@@ -24,6 +54,12 @@ class MenuItemsManagerPage extends AdminManagerPage
 			'Language' => 'filter_language',
 			);
 
+	/**
+	 * Array of toolbar id values for this page
+	 *
+	 * @var    array
+	 * @since  3.0
+	 */
 	public $toolbar = array (
 			'New' => 'toolbar-new',
 			'Edit' => 'toolbar-edit',
@@ -38,6 +74,12 @@ class MenuItemsManagerPage extends AdminManagerPage
 			'Help' => 'toolbar-help',
 	);
 
+	/**
+	 * Array of submenu links used for this page
+	 *
+	 * @var    array
+	 * @since  3.0
+	 */
 	public $submenu = array (
 			'option=com_menus&view=menus',
 	);
@@ -45,8 +87,8 @@ class MenuItemsManagerPage extends AdminManagerPage
 	/**
 	 * Add a new menu item in the Menu Manager: Menu Items screen.
 	 *
-	 * @param string   $menuItemType   One of the allowed Menu Item Types (Single Article, Featured Contacts, etc.)
 	 * @param string   $title          Menu Title field
+	 * @param string   $menuItemType   One of the allowed Menu Item Types (Single Article, Featured Contacts, etc.)
 	 * @param string   $menuLocation   Menu Location field
 	 * @param array    $otherFields    associative array of other fields in the form label => value.
 	 *
@@ -54,7 +96,7 @@ class MenuItemsManagerPage extends AdminManagerPage
 	 * This can be designated in the $otherFields with any of the following labels: 'request', 'category', 'article', 'contact', 'newsfeed', 'weblink'.
 	 * For example: array('article' => 'Australian Parks').
 	 *
-	 * @return  MenuItmesManagerPage
+	 * @return  MenuItemsManagerPage
 	 */
 	public function addMenuItem($title='Test Menu Item', $menuItemType='List All Categories', $menuLocation = 'Main Menu', array $otherFields = array())
 	{
@@ -75,7 +117,14 @@ class MenuItemsManagerPage extends AdminManagerPage
 		return $this->test->getPageObject('MenuItemsManagerPage');
 	}
 
-
+	/**
+	 * Edit a menu item in the Menu Manager: Menu Items screen.
+	 *
+	 * @param string   $title          Menu Title field
+	 * @param array    $fields         associative array of fields in the form label => value.
+	 *
+	 * @return  void
+	 */
 	public function editMenuItem($title, $fields)
 	{
 		$this->clickItem($title);
