@@ -26,6 +26,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+2-May-2013 Mark Dexter
+ # Fix up doc blocks as example for Webdriver page classes and tests.
+
 30-Apr-2013 Mark Dexter
  # Fix system tests for clearfix class in front end
 
